; ModuleID = '/home/carl/AnghaBench/systemd/src/analyze/extr_analyze.c_unit_times_free.c'
source_filename = "/home/carl/AnghaBench/systemd/src/analyze/extr_analyze.c_unit_times_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.unit_times = type { %struct.unit_times*, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.unit_times*)* @unit_times_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @unit_times_free(%struct.unit_times* %0) #0 {
  %2 = alloca %struct.unit_times*, align 8
  %3 = alloca %struct.unit_times*, align 8
  store %struct.unit_times* %0, %struct.unit_times** %2, align 8
  %4 = load %struct.unit_times*, %struct.unit_times** %2, align 8
  store %struct.unit_times* %4, %struct.unit_times** %3, align 8
  br label %5

5:                                                ; preds = %15, %1
  %6 = load %struct.unit_times*, %struct.unit_times** %3, align 8
  %7 = getelementptr inbounds %struct.unit_times, %struct.unit_times* %6, i32 0, i32 1
  %8 = load i64, i64* %7, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %18

10:                                               ; preds = %5
  %11 = load %struct.unit_times*, %struct.unit_times** %3, align 8
  %12 = getelementptr inbounds %struct.unit_times, %struct.unit_times* %11, i32 0, i32 0
  %13 = load %struct.unit_times*, %struct.unit_times** %12, align 8
  %14 = call i32 @free(%struct.unit_times* %13)
  br label %15

15:                                               ; preds = %10
  %16 = load %struct.unit_times*, %struct.unit_times** %3, align 8
  %17 = getelementptr inbounds %struct.unit_times, %struct.unit_times* %16, i32 1
  store %struct.unit_times* %17, %struct.unit_times** %3, align 8
  br label %5

18:                                               ; preds = %5
  %19 = load %struct.unit_times*, %struct.unit_times** %2, align 8
  %20 = call i32 @free(%struct.unit_times* %19)
  ret void
}

declare dso_local i32 @free(%struct.unit_times*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
